--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  xml: 4.5.1
-  http: 0.12.2
-  path_provider: 1.6.27
+  xml: 5.1.0
+  http: 0.13.3
+  path_provider: 2.0.1
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -34,8 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^0.2.9
-  flutter_launcher_icons: ^0.7.2
+  flutter_native_splash: ^1.1.8+4
+  flutter_launcher_icons: ^0.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
